<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MQTTLiga</string>
    <string name="action_settings">Settings</string>
    <string name="action_fullscreen">Fullscreen</string>
    <string name="action_connect">Connect</string>
    <string name="hello_world">Hello world!</string>
    <string name="prefs_mqtt_title">MQTT Settings</string>
    <string name="prefs_mqtt_broker">MQTT Broker</string>
    <string name="prefs_mqtt_broker_sum">108.61.178.24</string>
    <string name="prefs_mqtt_port">MQTT Port</string>
    <string name="prefs_send_heartbeat">Send heartbeats</string>
    <string name="prefs_notify_title">Notifications</string>
    <string name="prefs_notify_active">Notify</string>
    <string name="prefs_events_title">Events</string>

    <string name="prefs_highlight_minutes">Highlight events (minutes)</string>
    <string name="prefs_voice_output">Voice output</string>
    <string name="prefs_delete_games">Delete games after (days)</string>
    <string name="prefs_screen_on_title">Screen</string>
    <string name="prefs_screen_on">Keep screen on</string>         
    <string name="prefs_info_title">Credits</string>
    <string name="prefs_contact">About</string>
    <string name="prefs_contact_sum">the developer&#8230;</string>
    <string name="prefs_contact_text">MQTTLiga was developed by Holger Wirth in his spare time for the love of football (and MQTT).\nContact: holgi.wirth@gmail.com</string>
    <string name="prefs_licenses">Licenses</string>
    <string name="prefs_licenses_sum">Details about the use of open-source-software in MQTTLiga</string>
    <string name="prefs_version">Version</string>
    <string name="prefs_version_sum">2.2 (27.03.21)</string>
    
    <string name="BAY">Bayern Munchen</string>
    <string name="BAY_S">Bayern</string>
    <string name="BER">Hertha BSC</string>
    <string name="BRA">Eintracht Braunschweig</string>
    <string name="BRA_S">Braunschweig</string>
    <string name="BRE">Werder Bremen</string>
    <string name="BVB">Borussia Dortmund</string>
    <string name="BVB_S">Dortmund</string>
    <string name="F95">Fortuna Dusseldorf</string>
    <string name="F95_S">Dusseldorf</string>
    <string name="FCA">FC Augsburg</string>
    <string name="FCK">1.FC Kaiserslautern</string>
    <string name="FCK_S">Kaiserslautern</string>
    <string name="FRA">Eintracht Frankfurt</string>
    <string name="FRA_S">Frankfurt</string>
    <string name="SGF">Greuther Furth</string>
    <string name="GLA">Borussia M\'Gladbach</string>
    <string name="GLA_S">Gladbach</string>    
    <string name="HAN">Hannover 96</string>
    <string name="HOF">Hoffenheim</string>
    <string name="HSV">Hamburger SV</string>
    <string name="KOE">1.FC Koln</string>
    <string name="LEV">Bayer Leverkusen</string>
    <string name="LEV_S">Leverkusen</string>
    <string name="MAI">FSV Mainz 05</string>
    <string name="FCN">1.FC Nuremberg</string>
    <string name="PAU">FC St. Pauli</string>
    <string name="S04">FC Schalke 04</string>
    <string name="SCF">SC Freiburg</string>
    <string name="VFB">VfB Stuttgart</string>
    <string name="WOL">VfL Wolfsburg</string>
    <string name="PAD">SC Paderborn</string>

    <string name="M60">1860 Munchen</string>
    <string name="BOC">VfL Bochum</string>
    <string name="DSC">Arminia Bielefeld</string>
    <string name="DSC_S">Bielefeld</string>
    <string name="FCH">Heidenheim</string>
    <string name="FCU">Union Berlin</string>
    <string name="FSV">FSV Frankfurt</string>
    <string name="KSC">Karlsruher SC</string>
    <string name="MSV">MSV Duisburg</string>
    <string name="RBL">RB Leipzig</string>
    <string name="SVS">SV Sandhausen</string>
    <string name="FCI">FC Ingolstadt</string>
    <string name="SVD">SV Darmstadt</string>
    <string name="SGD">Dynamo Dresden</string>
    <string name="AUE">Erzgebirge Aue</string>
    <string name="FWK">Würzburger Kickers</string>
    <string name="FWK_S">Würzburg</string>
    <string name="SSV">Jahn Regensburg</string>
    <string name="HOL">Holstein Kiel</string>
    <string name="FCM">1.FC Magdeburg</string>
    <string name="WEH">Wehen Wiesbaden</string>
    <string name="OSN">VfL Osnabrück</string>
    <string name="HRO">Hansa Rostock</string>

    <string name="START">Game starts</string>
    <string name="GOALG">Goal for</string>
    <string name="GOALH">Goal for</string>
    <string name="HALF">Halftime</string>
    <string name="END">Fulltime</string>
    <string name="COLON">against</string>
    <string name="TO">to</string>
    <string name="prefs_liga_title">Subscriptions</string>
    <string name="prefs_BL1" translatable="false">1. Bundesliga</string>
    <string name="prefs_BL2" translatable="false">2. Bundesliga</string>
    <string name="prefs_notify_overlay">Overlay</string>
    <string name="Service_title">Service started:</string>
    <string name="Service_text">Last message:</string>
    <string name="prefs_ssl">Secure connection with SSL</string>
    <string name="VFL">VfL Osnabrück</string>
</resources>
